[gd_scene load_steps=3 format=3 uid="uid://ye8aioocqpus"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="1_yqeox"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = -5.0
offset_right = 570.0
offset_bottom = 1019.0
texture = ExtResource("1_yqeox")
stretch_mode = 6

[node name="btn_moves_easy" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.208
anchor_right = 0.497
anchor_bottom = 0.208
offset_left = -220.272
offset_top = -64.992
offset_right = 220.728
offset_bottom = 65.008
grow_horizontal = 2
theme_override_font_sizes/font_size = 44
text = "Moves – Easy
target: 200"

[node name="btn_moves_hard" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.39
anchor_right = 0.5
anchor_bottom = 0.39
offset_left = -222.0
offset_top = -65.36
offset_right = 216.0
offset_bottom = 64.64
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 44
text = "Moves – Hard
target: 500
"

[node name="btn_timed_easy" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.576
anchor_right = 0.5
anchor_bottom = 0.576
offset_left = -222.0
offset_top = -64.824
offset_right = 219.0
offset_bottom = 65.176
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 44
text = "Timed – Easy
target: 200"

[node name="btn_timed_hard" type="Button" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.764
anchor_right = 0.497
anchor_bottom = 0.764
offset_left = -221.272
offset_top = -65.3361
offset_right = 220.728
offset_bottom = 64.6639
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 44
text = "Timed – Hard
target: 500"
